Trying out Riot again

--- a/html/index.html
+++ b/html/index.html
@@ -178,7 +178,7 @@
         
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<!--Die Tagenamen müssen noch angegeben werden-->
-		<script src = "issuetracker.tag" type = "riot.tag"></script>
+		<script src = "/js/alert.tag" type = "riot/tag"></script>
     <script>
       riot.mount('alert',{message:"hello Adam"})
     </script>
