--- a/html/index.html
+++ b/html/index.html
@@ -11,12 +11,11 @@
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="/css/datepicker.css">
     <link rel="stylesheet" href="/css/custom.style.css">
+		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <script src="/js/jquery-3.1.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="js/bootstrap.js"></script>
     <script src="/js/jquery.datepicker.js"></script>
-    <script src="/js/issuetracker.js"></script>
     <script src="https://cdn.jsdelivr.net/riot/2.6/riot+compiler.min.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -102,7 +101,7 @@
 		<!--Die Tagenamen müssen noch angegeben werden-->
 		<script src = "/js/issuetracker.tag" type = "riot/tag"></script>
     <script>
-      riot.mount('issuetracker', {issues: [{state:"done", description:"I have an issue"}]});
+      riot.mount('issuetracker', {issues: [{state:"done", description:"I have an issue", date: "11.12.2016"}]});
     </script>
   </body>
 </html>
