--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="/js/jquery.datepicker.js"></script>
     <script src="https://cdn.jsdelivr.net/riot/2.6/riot+compiler.min.js"></script>
+		<script src="/js/guid.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -101,7 +102,7 @@
 		<!--Die Tagenamen müssen noch angegeben werden-->
 		<script src = "/js/issuetracker.tag" type = "riot/tag"></script>
     <script>
-      riot.mount('issuetracker', {issues: [{state:"done", description:"I have an issue", date: "11.12.2016"}]});
+      riot.mount('issuetracker', {issues: []});
     </script>
   </body>
 </html>
