--- a/html/js/project.tag.html
+++ b/html/js/project.tag.html
@@ -42,8 +42,10 @@
 </div>
 <script>
   this.projects = opts.projects;
+  var projectStorage = new Store("projects");
   add(e) {
 		this.projects.push({ client_id: guid(), name: this.name.value});
+    projectStorage.dump(this.projects);
 		this.name.value = '';
 	}
 </script>
