--- a/html/js/issuetracker.tag.html
+++ b/html/js/issuetracker.tag.html
@@ -22,7 +22,7 @@
 							<div class="col-md-3"><div class = "form-group">
 								<label> Choose Date
 								</label>
-								<input  type="text" placeholder="Chose date" id="datepicker" class="datepicker form-control"></input></div>
+								<input  type="text" placeholder="Chose date" name="datepicker" class="datepicker form-control"></input></div>
 							</div>
 							<div class="col-md-4">
 								<div class = "form-group">
