Attempt to get issues changes propogating up to the store
It's working. Next - readd the original markup from project and issue
tags

--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,10 @@
     <script>
       var store = {
         currentProject: null,
-        projects: [{name: 'fff', issues: [{name: 'fff'}]}]
+        projects: [
+          {name: 'Project 1', issues: [{name: 'Issue 1.1'}]},
+          {name: 'Project 2', issues: [{name: 'Issue 1.2'}]}
+        ]
       };
       riot.mount('app', store);
     </script>
