Debugger can be turned on and off via opts

--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,7 @@
     <script src = "/js/app.tag.html" type = "riot/tag"></script>
     <script>
       var store = {
+        debug:  true,
         currentProject: null,
         projects: [
           {name: 'Project 1', issues: [{name: 'Issue 1.1'}]},
