Using title as specified in the swagger API
Seems like attribute names need to be unique. Using title twice on the
page leads to empty results for some reason.

--- a/html/index.html
+++ b/html/index.html
@@ -54,8 +54,8 @@
         debug:  true,
         currentProject: null,
         projects: [
-          {name: 'Project 1', issues: [{name: 'Issue 1.1'}]},
-          {name: 'Project 2', issues: [{name: 'Issue 1.2'}]}
+          {title: 'Project 1', issues: [{title: 'Issue 1.1'}]},
+          {title: 'Project 2', issues: [{title: 'Issue 1.2'}]}
         ]
       };
       riot.mount('app', store);
