--- a/html/js/app.tag.html
+++ b/html/js/app.tag.html
@@ -3,11 +3,47 @@
   <pre style='display:none'>
     { JSON.stringify(store, null, 2) }
   </pre>
-  <div class='app'>
-    <form onsubmit={ add }>
-      <input type="text" class="text" value="" name="projectTitle">
-      <button>Add</button>
-    </form>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class='panel-title'>New Project</h3>
+        </div>
+        <div class="panel-body">
+            <form onsubmit={ add }>
+          <div class="row">
+            <div class="col-md-5">
+              <div class="form-group">
+                <label>
+                  Select a project!
+                </label>
+                <select multiple class="form-control">
+                  <option each={ projects } onclick = { selectCurrentProject }>{ title } </option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="form-group">
+                <label>
+                  Enter project name
+                </label>
+                <input type = "text" class="form-control" name="projectTitle"/>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="form-group">
+                <label>
+                  &nbsp;
+                </label>
+                <button class="form-control btn btn-primary">Create</button>
+              </div>
+            </div>
+          </div>
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
     <ul each={ projects }>
       <project opts= { title }/>
     </ul>
