Added the issue form

--- a/html/js/app.tag.html
+++ b/html/js/app.tag.html
@@ -75,16 +75,55 @@
 </app>
 
 <project>
-  <li>
-    <a href="#" onclick={ parent.remove } data={ this }>X</a> { title }
-    <form onsubmit={ add }>
-      <input type="text" class="text" value="" name="issueTitle">
-      <button>Add</button>
-    </form>
-    <ul each={ this.issues }>
-      <issue/>
-    </ul>
-  </li>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">{ title } Issues</h3>
+        </div>
+        <div class="panel-body">
+          <form onsubmit={ add }>
+            <div class="row">
+              <div class="col-md-3">
+                <label> Select Priority
+                </label>
+                <select class="form-control">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+              </div>
+              <div class="col-md-3"><div class = "form-group">
+                <label> Choose Date
+                </label>
+                <input  type="text" placeholder="Chose date" name="datepicker" class="datepicker form-control"></input></div>
+              </div>
+              <div class="col-md-4">
+                <div class = "form-group">
+                  <label>
+                    Describe your Issue
+                  </label>
+                  <textarea class="form-control" name="issueTitle"></textarea>
+                </div>
+              </div>
+              <div class="col-md-2"><div class="form-group">
+                <label>
+
+                </label>
+                <button class="form-control btn btn-primary" id = "save_issue">Create</button>
+              </div></div>
+
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <ul each={ this.issues }>
+    <issue/>
+  </ul>
   <script>
     add(e) {
       this.issues.push({title: this.issueTitle.value})
