--- a/html/js/app.tag.html
+++ b/html/js/app.tag.html
@@ -1,7 +1,7 @@
 <app>
 <div class={ debug: opts.debug }>
   <pre style='display:none'>
-    { JSON.stringify(store, null, 2) }
+{ JSON.stringify(store, null, 2) }
   </pre>
   <div class="row">
     <div class="col-md-12">
@@ -44,9 +44,9 @@
       </div>
     </div>
   </div>
-    <ul each={ projects }>
-      <project opts= { title }/>
-    </ul>
+  <div each={ projects }>
+    <project opts= { title }/>
+  </div>
   </div>
 </div>
   <script>
@@ -121,26 +121,70 @@
       </div>
     </div>
   </div>
-  <ul each={ this.issues }>
-    <issue/>
-  </ul>
+  <div class = "row">
+    <div class = "col-md-12">
+      <table class = "table table-bordered">
+        <thead>
+          <tr>
+            <th>
+              Done
+            </th>
+            <th>
+              Description
+            </th>
+            <th>
+              Date
+            </th>
+            <th>
+              Delete
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr each={ this.issues } data-is="issue" class= { completed: done }>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
   <script>
     add(e) {
-      this.issues.push({title: this.issueTitle.value})
+      this.issues.push({title: this.issueTitle.value, due_date: this.datepicker.value})
       this.issueTitle.value = '';
     }
+
     remove(e) {
       var issue = e.item;
       var index = this.issues.indexOf(issue);
       this.issues.splice(index, 1);
       this.parent.update();
     }
+
+    toggle(e){
+      var item = e.item;
+      item.done = !item.done;
+      this.parent.update();
+      return true;
+    }
   </script>
 </project>
 
 <issue>
-  <li>
-    <a href="#" onclick={ parent.remove } data={ this }>X</a> { title }
-  </li>
+  <td>
+    <div class="form-check">
+      <label class="form-check-label">
+        <input class="form-check-input" type="checkbox" value="" checked={ done } onclick = { parent.toggle }></input>
+      </label>
+    </div>
+  </td>
+  <td class = "description">
+    { title }
+  </td>
+  <td class = "date">
+    { due_date }
+  </td>
+  <td>
+    <span class="glyphicon glyphicon-trash" aria-hidden="true" onclick = {parent.remove }></span>
+  </td>
   </script>
 </issue>
