Moved the components back to their own files
Added priority field, as this is needed for the API, plus made all the
fields required.

--- a/html/index.html
+++ b/html/index.html
@@ -49,13 +49,15 @@
       <app/>
 
     <script src = "/js/app.tag.html" type = "riot/tag"></script>
+    <script src = "/js/project.tag.html" type = "riot/tag"></script>
+    <script src = "/js/issue.tag.html" type = "riot/tag"></script>
     <script>
       var store = {
         debug:  true,
         currentProject: null,
         projects: [
-          {client_id: guid(), title: 'Project 1', issues: [{client_id: guid(), title: 'Issue 1.1'}]},
-          {client_id: guid(), title: 'Project 2', issues: [{client_id: guid(), title: 'Issue 1.2'}]}
+          {client_id: guid(), title: 'Project 1', issues: [{client_id: guid(), title: 'Issue 1.1', due_date: '12/12/2016', priority: 1}]},
+          {client_id: guid(), title: 'Project 2', issues: [{client_id: guid(), title: 'Issue 1.2', due_date: '23/12/2016', priority: 2}]}
         ]
       };
       riot.mount('app', store);
