--- a/html/js/app.tag.html
+++ b/html/js/app.tag.html
@@ -18,7 +18,7 @@
                   <label>
                     Select a project!
                   </label>
-                  <select multiple class="form-control">
+                  <select required=true multiple class="form-control">
                     <option each={ projects } onclick = { selectCurrentProject }>{ title } </option>
                   </select>
                 </div>
@@ -28,7 +28,7 @@
                   <label>
                     Enter project name
                   </label>
-                  <input type = "text" class="form-control" name="projectTitle"/>
+                  <input required=true type = "text" class="form-control" name="projectTitle"/>
                 </div>
               </div>
               <div class="col-md-2">
@@ -83,118 +83,3 @@
     }
   </style>
 </app>
-
-<project>
-  <div class="row">
-    <div class="col-md-12">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">{ title } Issues</h3>
-        </div>
-        <div class="panel-body">
-          <form onsubmit={ add }>
-            <div class="row">
-              <div class="col-md-3">
-                <label> Select Priority
-                </label>
-                <select class="form-control">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </div>
-              <div class="col-md-3"><div class = "form-group">
-                <label> Choose Date
-                </label>
-                <input  type="text" placeholder="Chose date" name="datepicker" class="datepicker form-control"></input></div>
-              </div>
-              <div class="col-md-4">
-                <div class = "form-group">
-                  <label>
-                    Describe your Issue
-                  </label>
-                  <input type="text" class="form-control" value="" name="issueTitle">
-                </div>
-              </div>
-              <div class="col-md-2"><div class="form-group">
-                <label>
-
-                </label>
-                <button class="form-control btn btn-primary" id = "save_issue">Create</button>
-              </div></div>
-
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class = "row">
-    <div class = "col-md-12">
-      <table class = "table table-bordered">
-        <thead>
-          <tr>
-            <th>
-              Done
-            </th>
-            <th>
-              Description
-            </th>
-            <th>
-              Date
-            </th>
-            <th>
-              Delete
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr each={ this.issues } data-is="issue" class= { completed: done }>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <script>
-    add(e) {
-      this.issues.push({client_id: guid(), title: this.issueTitle.value, due_date: this.datepicker.value})
-      this.issueTitle.value = '';
-    }
-
-    remove(e) {
-      var issue = e.item;
-      var index = this.issues.indexOf(issue);
-      this.issues.splice(index, 1);
-      this.parent.update();
-    }
-
-    toggle(e){
-      var item = e.item;
-      item.done = !item.done;
-      this.parent.update();
-      return true;
-    }
-  </script>
-</project>
-
-<issue>
-  <td>
-    <div class="form-check">
-      <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" value="" checked={ done } onclick = { parent.toggle }></input>
-      </label>
-    </div>
-  </td>
-  <td class = "description">
-    { title }
-  </td>
-  <td class = "date">
-    { due_date }
-  </td>
-  <td>
-    <span class="glyphicon glyphicon-trash" aria-hidden="true" onclick = {parent.remove }></span>
-  </td>
-  </script>
-</issue>
